02/yaml/deploy/httpd/02_httpd_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - image: httpd
        imagePullPolicy: IfNotPresent
        name: httpd
        ports:
        - containerPort: 80
          protocol: TCP
